--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
    "name": "GraphiQL",
-   "version": "1.0.0",
+   "version": "1.0.4",
    "description": "GraphiQL App",
    "author": "Jess Thrysoee",
    "private": true,
    "main": "public/electron.js",
    "homepage": "./",
    "dependencies": {
-      "electron-is-dev": "^0.1.2",
-      "graphiql": "^0.11.0",
+      "electron-is-dev": "^0.2.0",
+      "electron-updater": "^2.4.3",
+      "graphiql": "^0.11.2",
       "graphql": "^0.10.3",
       "react": "^15.6.1",
-      "react-dom": "^15.6.1",
-      "electron-updater": "^2.4.3"
+      "react-dom": "^15.6.1"
    },
    "devDependencies": {
       "concurrently": "^3.5.0",
       "electron": "^1.7.3",
-      "electron-builder": "^19.9.1",
-      "react-scripts": "1.0.7",
+      "electron-builder": "^19.11.1",
+      "react-scripts": "^1.0.10",
       "wait-on": "^2.0.2"
    },
    "scripts": {
