--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
    "name": "GraphiQL",
-   "version": "1.0.5",
+   "version": "1.0.6",
    "description": "GraphiQL App",
    "author": "Jess Thrysoee",
    "private": true,
    "main": "public/electron.js",
    "homepage": "./",
    "dependencies": {
+      "ajv": "^5.2.5",
       "electron-is-dev": "^0.3.0",
-      "electron-updater": "^2.8.9",
-      "graphiql": "^0.11.3",
-      "graphql": "^0.11.3",
-      "react": "^15.6.1",
-      "react-dom": "^15.6.1"
+      "electron-updater": "^2.15.0",
+      "graphiql": "^0.11.6",
+      "graphql": "^0.11.7",
+      "react": "^16.0.0",
+      "react-dom": "^16.0.0"
    },
    "devDependencies": {
       "concurrently": "^3.5.0",
       "electron": "^1.8.0",
-      "electron-builder": "^19.28.4",
-      "react-scripts": "^1.0.13",
+      "electron-builder": "^19.40.0",
+      "react-scripts": "^1.0.14",
       "wait-on": "^2.0.2"
    },
    "scripts": {
